# filterutils

./: .gitignore  README.md  pyproject.toml
src/filterutils/: __init__.py  exceptions.py  filter.py  filter_expression_parser.py  filter_node.py  filter_node_validation.py  filter_sql_renderer.py  filter_tree.py  operators.py  unique_name_generator.py  value_getter.py
tests/: test_filter_expression_parser.py  test_filter_match_and_apply.py  test_filter_node_validation.py  test_filter_tree_sql_renderer.py
